# cours-prog

./: plot-functions.py  prog-base-dependances.dot
derivee/: exercice_dérivée_solution.py
epidemie/: main.py  pyproject.toml
flood-fill/: flood_fill.py  pyproject.toml
http-mirror-python/: README.md  main.py  requirements.txt
netcat-game/: netcat-game.py
plinko/: animation_billes.py  animation_receptacle.py  animation_receptacle_couleur.py  graphique_receptacle.py  pyproject.toml  texte_receptacle.py
steganographie/: .gitignore  extract-message-simple.py  extract-message.py  pyproject.toml
zero-fonction/: afficher_fonction_tables_et_graphique.py  dev-requirements.txt  dichotomie.py  exercice_2M.py  exercice_2M_solution_dérivées.py  fonctions.py  plot-functions.py  pyproject.toml  requirements.txt  tables_et_graphique.py
