[project]
name = "zero-fonction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
